--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@mui/x-date-pickers": "^5.0.0-beta.1",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.1.1",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.27.2",
 		"prop-types": "^15.8.1",
 		"react": "^18.0.0",
+		"react-datepicker": "^4.8.0",
+		"react-dates": "^21.8.0",
 		"react-dom": "^18.0.0",
+		"react-loading-skeleton": "^3.1.0",
+		"react-rainbow-components": "^1.30.1",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"rsuite": "^5.16.1",
+		"styled-components": "^5.3.5",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
