--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"dependencies": {
 		"@emotion/react": "^11.9.3",
 		"@emotion/styled": "^11.9.3",
+		"@material-ui/core": "^4.12.4",
 		"@mui/material": "^5.9.1",
+		"@mui/styles": "^5.9.1",
 		"@mui/x-date-pickers": "^5.0.0-beta.1",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.1.1",
