--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
 		"prop-types": "^15.8.1",
+		"qrcode.react": "^3.1.0",
 		"react": "^18.0.0",
 		"react-datepicker": "^4.8.0",
 		"react-dates": "^21.8.0",
 		"react-dom": "^18.0.0",
 		"react-loading-skeleton": "^3.1.0",
+		"react-modal-dom": "^1.0.6",
 		"react-rainbow-components": "^1.30.1",
+		"react-redux": "^8.0.2",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
+		"redux": "^4.2.0",
 		"rsuite": "^5.16.1",
 		"styled-components": "^5.3.5",
 		"web-vitals": "^2.1.4"
